configured tiara connect...pending successfully integration